# open-mcp-manager

./: .gitignore  .stellarisrc  .vectorconfig.json  index.html  package-lock.json  package.json  stellaris.boundaries.json  tsconfig.json  vite.config.ts
docs/: stellaris-rust-graph-feature-request.md
docs/design/: Open MCP Manager.html  app-cloud-sync.jsx  app-data.jsx  app-detail.jsx  app-manage.jsx  app-marketplace.jsx  app-modals.jsx  app-secondary.jsx  app-sidebar.jsx  colors_and_type.css
docs/plans/: 2026-05-16-open-mcp-manager-design.md  2026-05-16-open-mcp-manager-implementation.md  phase10-codex-prompt.md  phase6-gemini-prompt.md  phase7-gemini-prompt.md  phase8-gemini-prompt.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  vault.rs
src-tauri/src/adapters/: claude_code.rs  common_impl.rs  disabled_store.rs  mod.rs  traits.rs
src-tauri/src/cloud/: github_gist.rs  mod.rs  rest_api.rs  s3.rs  traits.rs  webdav.rs
src-tauri/src/commands/: clients.rs  cloud.rs  dxt.rs  mod.rs  profiles.rs  registry.rs  servers.rs  sync.rs  vault.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial.sql
src-tauri/src/registry/: github_index.rs  mod.rs  npm.rs  pypi.rs  smithery.rs  traits.rs
src-tauri/tests/: adapter_tests.rs  profile_tests.rs  registry_tests.rs  vault_tests.rs
src/hooks/: useTauriCommand.ts
src/stores/: clientStore.ts  cloudSyncStore.ts  installedStore.ts  profileStore.ts  registryStore.ts  toastStore.ts
src/styles/: fonts.css  global.css  tokens.css
(+32 files in other folders)
