[package]
name = "open-mcp-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_mcp_manager"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"
base64 = "0.22"
tauri = { version = "2", features = [] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"] }
zip = "2"
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
